--- a/app.html
+++ b/app.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>AVA • Minha área</title>
+    <title>AVA • Painel</title>
 
     <link rel="stylesheet" href="./assets/css/site.css" />
     <link rel="stylesheet" href="./assets/css/chrome.css" />
@@ -30,11 +30,9 @@
         "
       >
         <h1>Meus Cursos</h1>
-        <p style="color: #666">Painel do aluno.</p>
-
+        <p style="color: #666">Bem-vindo ao seu painel de estudos.</p>
         <div style="border-top: 1px solid #eee; margin: 20px 0"></div>
-
-        <div id="app-root">Carregando...</div>
+        <div id="app-root">Carregando seus dados...</div>
       </section>
     </main>
 
