--- a/assets/chrome.html
+++ b/assets/chrome.html
@@ -2,7 +2,7 @@
   <header class="site-header">
     <div class="inner">
       <div class="left">
-        <button id="sidebar-toggle" class="btn icon">
+        <button id="sidebar-toggle" class="btn icon" title="Menu">
           <i class="bx bx-menu"></i>
         </button>
         <a class="brand" href="./index.html"
@@ -27,6 +27,7 @@
           <div class="avatar-circle"><i class="bx bx-user"></i></div>
           <span id="user-name">Aluno</span>
         </div>
+
         <div id="auth-actions">
           <a href="./login.html" class="btn-sm primary">Entrar</a>
         </div>
