--- a/assets/chrome.html
+++ b/assets/chrome.html
@@ -6,7 +6,7 @@
           <i class="bx bx-menu"></i>
         </button>
         <a class="brand" href="./index.html"
-          ><span class="dot"></span><span>AVA3</span></a
+          ><span class="dot"></span><span>SECITEC Conecta</span></a
         >
       </div>
 
@@ -40,9 +40,11 @@
     <div class="sidebar-inner">
       <div class="side-group">
         <p class="side-title">NAVEGAÇÃO</p>
+        
         <a class="side-item" href="./app.html">
-          <i class="bx bx-grid-alt"></i><span class="label-text">Painel</span>
+          <i class="bx bx-book-bookmark"></i><span class="label-text">Meus Cursos</span>
         </a>
+        
         <a class="side-item" href="#">
           <i class="bx bx-calendar"></i
           ><span class="label-text">Calendário</span>
