--- a/course-editor.html
+++ b/course-editor.html
@@ -93,10 +93,18 @@
             <div class="bg-white p-3 border-bottom shadow-sm">
                 <h4 id="previewHeader" class="fw-bold mb-1"></h4>
                 <p id="previewDesc" class="text-muted small mb-0"></p>
+                
                 <div id="quiz-action-area" class="mt-3" style="display:none">
                     <p class="mb-2 fw-bold text-warning-emphasis"><i class='bx bx-info-circle'></i> Configuração do Quiz</p>
                     <a href="#" id="btn-config-quiz" target="_blank" class="btn btn-warning fw-bold px-4 shadow-sm">
                         <i class='bx bx-wrench'></i> ABRIR CONSTRUTOR DE QUIZ
+                    </a>
+                </div>
+
+                <div id="task-action-area" class="mt-3" style="display:none">
+                    <p class="mb-2 fw-bold text-success-emphasis"><i class='bx bx-info-circle'></i> Configuração da Tarefa</p>
+                    <a href="#" id="btn-config-task" target="_blank" class="btn btn-success fw-bold px-4 shadow-sm">
+                        <i class='bx bx-edit'></i> ABRIR CONSTRUTOR DE TAREFA
                     </a>
                 </div>
             </div>
@@ -227,6 +235,10 @@
     
     <template id="tpl-btn-quiz">
         <a href="#" target="_blank" class="btn btn-sm btn-warning text-dark border shadow-sm me-1" title="Configurar Quiz"><i class='bx bx-cog'></i></a>
+    </template>
+
+    <template id="tpl-btn-task">
+        <a href="#" target="_blank" class="btn btn-sm btn-success text-white border shadow-sm me-1" title="Configurar Tarefa"><i class='bx bx-task'></i></a>
     </template>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
