--- a/classroom.html
+++ b/classroom.html
@@ -20,11 +20,11 @@
         <header class="classroom-header">
             <div class="d-flex align-items-center gap-3">
                 <a href="app.html" class="btn btn-light border btn-sm rounded-circle"><i class='bx bx-arrow-back'></i></a>
-                <div class="header-info">
-                    <h2 id="header-course-title">...</h2>
-                    <p id="header-class-name">...</p>
-                </div>
+                
+                <div class="header-info d-flex flex-column justify-content-center">
+                    <p id="header-class-name">...</p>   <h2 id="header-course-title">...</h2> </div>
             </div>
+            
             <div class="d-flex align-items-center gap-3">
                 <div class="d-flex flex-column align-items-end me-3">
                     <div class="progress" style="width: 100px; height: 6px;"><div class="progress-bar bg-success" id="overall-progress" style="width: 0%"></div></div>
