--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>AVA • Início</title>
+    <title>AVA3 • Início</title>
 
     <link rel="stylesheet" href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"/>
     <link rel="stylesheet" href="./assets/css/chrome.css" />
     <link rel="stylesheet" href="./assets/css/site.css" />
   </head>
 
-  <body class="has-sidebar">
+  <body data-page="home" class="has-sidebar">
     <div id="site-header"></div>
     <div id="site-sidebar"></div>
 
@@ -18,29 +18,27 @@
       
       <section class="hero">
         <div class="badge">
-          <i class="bx bxs-school"></i>
-          AVA 3.0
+          <i class="bx bxs-graduation"></i>
+          Ambiente Virtual de Aprendizagem
         </div>
+
         <h1>Transforme seu aprendizado.</h1>
-        <p>Bem-vindo ao Ambiente Virtual de Aprendizagem. Escolha uma turma abaixo e comece agora.</p>
-        
-        <div class="hero-actions">
-            <a href="login.html" class="btn-hero btn-primary-hero">Acessar Conta</a>
-            <a href="#available-classes" class="btn-hero btn-outline-hero">Ver Turmas</a>
-        </div>
+        <p>
+          Bem-vindo ao AVA3. Explore as turmas disponíveis abaixo e inicie sua jornada de conhecimento.
+        </p>
       </section>
 
       <section id="available-classes">
         <div class="section-header">
             <div class="section-title">
-                <h2>Turmas Disponíveis</h2>
-                <p>Inscreva-se nos cursos abertos</p>
+                <h2><i class='bx bx-grid-alt'></i> Turmas Disponíveis</h2>
             </div>
         </div>
 
         <div class="class-grid" id="classes-container">
-            <div style="text-align: center; grid-column: 1/-1; padding: 40px;">
-                <i class='bx bx-loader-alt bx-spin' style="font-size: 2rem; color: #ccc;"></i>
+            <div style="text-align: center; grid-column: 1/-1; padding: 60px;">
+                <i class='bx bx-loader-alt bx-spin' style="font-size: 2.5rem; color: #ccc;"></i>
+                <p class="mt-3 text-muted">Carregando oportunidades...</p>
             </div>
         </div>
       </section>
